2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/api.php: Create a special call on Pandora FMS
	API to verify if it is a correct installation of Pandora 
	and get the Version.
	This call only retrieve "Pandora FMS [version] - [build]"
	without any security check.

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js: Fixed "press
	on scape" close event on enterprise dialog

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Fix the tags acl 
	check function to be compatible with acl propagation
	incident #345

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* operation/tree.php: Truncate the name of agents
	and modules in tree view to avoid ugly view for 
	incident #306

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added
	module description to massive operations for 
	incident #148

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fixed function that
	returns the user groups in tree way. It was broken
	when the user has acls over a group but not in his
	father. Incident: #342
	Merged from 4.1

2013-10-31 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added some parameters to
	'create_group' API function.

2013-10-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/performance.php: Added tip messages to
	advice possible conflicts of performance configuration

2013-10-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the output of data as csv when
	the data have a return carriges.

2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>
        
	* include/help/en/help_alert_config.php,
	include/help/en/help_alert_macros.php,
	include/help/es/help_alert_config.php,
	include/help/es/help_alert_macros.php,
	include/help/ja/help_alert_config.php,
	include/help/ja/help_alert_macros.php: Added _timezone_
	alert macro descriptions.
