@@ -1,3 +1,11 @@
+2013-11-06  Sergio Martin <sergio.martin@artica.es>
+
+	* include/constants.php
+	include/functions_graph.php: Added color collection in
+	constants file and use it in custom graphs to avoid
+	ugly black colors in graphs with more than three graphs
+	Incident #346
+
 2013-11-05  Sergio Martin <sergio.martin@artica.es>
 
 	* include/api.php: Create a special call on Pandora FMS
